--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -8,3 +8,19 @@
     <input type="password" id="senha" class="form-control">
   </div>
 </form>
+
+<!-- <form (submit)="$event.preventDefault()">
+  <div class="form-group">
+    <label for="email">EMAIL:</label>
+    <input [(ngModel)]="usuario.email" type="email" id="email" class="form-control">
+  </div>
+  <div class="form-group">
+    <label for="senha">SENHA:</label>
+    <input [(ngModel)]="usuario.senha" type="password" id="senha" class="form-control">
+  </div>
+  <button class="btn waves-effect waves-light"  
+    type="submit" name="action" (click)="fazerLogin()">
+    LOGIN
+    <i class="fa fa-paper-plane" aria-hidden="true"></i>
+  </button>
+</form> -->
